# phoenix

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  user_settings.json
common/utils/: dates.py
sandbox/notebooks/: bts.ipynb
src/common/: decorators.py  models.py  runners.py
src/common/database/: base.py  config.py
src/ingest-mlb/: Makefile  alembic.ini  main.py  mlb.py  models.py
src/ingest-mlb/alembic/: env.py
src/ingest-mlb/alembic/versions/: 08884eccda76_initial_migration_with_team_schedules_.py
src/ingest-mlb/database/: config.py  ingestion.py  models.py
